--- a/temp.html
+++ b/temp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This site is hosted on GitHub Pages!</p>
+    <p>Dr Hrishabh Bharadwaj </p>
 </body>
 </html>
 
